phase2/test_extra/test_2.out
Error type 7 at Line 23: unmatching operands
Error type 7 at Line 24: unmatching operands